fixing weird spacing on issues journal

--- a/sass/application.sass
+++ b/sass/application.sass
@@ -2762,7 +2762,7 @@ span.search_for_watchers, fieldset.settings label, #tab-content-members fieldset
 	margin-top: 0
 
 .splitcontent, div.journal, .syntaxhl .code pre
-	overflow: auto
+	padding-top: 5px
 
 div#search-results-counts ul
 	margin-top: .5em
